# tkinter-foundry

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml  version.yml
scripts/: build.py
src/app/: main.py
src/app/controllers/: main_controller.py
src/app/views/: main_window.py
tests/: test_controller.py
