[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tkinter-app"
version = "0.1.0"
description = "A custom tkinter application"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.0",
]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
tkinter-app = "app.main:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.8",
]

# -----------------------------
# Ruff configuration (ONLY HERE)
# -----------------------------
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP",
    "A", "ARG", "SIM", "TCH", "PLC", "PIE",
    "RET", "RUF"
]

ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
    "B006",
    "C408",
    "ARG001",
    "ARG002",
    "SIM108",
    "RUF012",
    "RUF013",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ARG001", "ARG002", "PLR2004"]
"scripts/**/*.py" = ["ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
